# ChangeLog for dev-ruby/breakpoint
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*breakpoint-2.4.6 (01 Aug 2014)

  01 Aug 2014; Hans de Graaff <graaff@gentoo.org> +breakpoint-2.4.6.ebuild:
  Version bump.

*breakpoint-2.4.2 (15 May 2014)

  15 May 2014; Hans de Graaff <graaff@gentoo.org> +breakpoint-2.4.2.ebuild,
  +metadata.xml:
  Initial import.
