@@ -1,2 +1,3 @@
 DIST breakpoint-2.4.2.gem 13824 SHA256 c64f0b77a1490780dd0d581a6f8e3d89587e7347c7d2a54bdec0bf30ffe20fff SHA512 8f0d368b30d1c5665ad958f4d4eeec16072ca6fe3543e948d86bbb39cb8be2b40e95b8d02a35ad4efdf63b572ebfb21dc22f3251521d585b254ab2b8d882e8df WHIRLPOOL de1f11c66c11d4410a00278bdecf0cf6fcf435834920d1ee539666fbb0760227613929ee9df0e6d4af23912ea4b2d3e55030e4eb581edba6ad5cf426326b4e5c
 DIST breakpoint-2.4.6.gem 13824 SHA256 5153cb62e95baff9b243b4bcf4dfb1d1f89003ae22f789906faf6252fc0c123c SHA512 b528276ff95ecf812fcb6eb4f7a6be7c034a8dd0379b0860a254422d705dce45b78f4898132b3072b80b282dd90149b0085648319499b9307c8b80d9c20fe5f2 WHIRLPOOL b81fe32d9e4d500d8a0a08bdbfc8adb4a26bb93ecab0bb50901afd245d688ff56a6aa829d2b9e4e188ee9d5b3fa8e5538aaacd61a19b4b36a963e0a6d2fe701a
+DIST breakpoint-2.5.0.gem 13824 SHA256 100ced1f9ac1994ad58246cc1ef53d773fd7ceb9847ad82140d9d0936efedc9c SHA512 b92493726b9747ca7f293e515a11aa99a8102bd89342817423702bff9d5caffa4b32065e7636f26e66347d5c52540cf6bb9398a41b86fe4f3ddec5c04c4b93da WHIRLPOOL bc6d5fc646379fb51477f3ef56d9b87d5bac172829187d119ab3c061849c6726396ce12bba0312de3747cb8f9107301fa4c6e70c45f09f815946b95382dd2e51
