@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*breakpoint-2.5.0 (11 Sep 2014)
+
+  11 Sep 2014; Hans de Graaff <graaff@gentoo.org> +breakpoint-2.5.0.ebuild:
+  Version bump.
+
 *breakpoint-2.4.6 (01 Aug 2014)
 
   01 Aug 2014; Hans de Graaff <graaff@gentoo.org> +breakpoint-2.4.6.ebuild:
